--- a/MyFlock 0.62/templates/index.html
+++ b/MyFlock 0.62/templates/index.html
@@ -14,6 +14,7 @@
     <a href="signup.html" class="button2">Signup</a>
     <a onclick="redirect_about()" class="button2"
     <a href="signin.html" class="button2">Sign in</a>
+    <input type="text" id="Search">
   </section>
   <div  class="title_text1">My Flock. Your Flock</div>
   <div id="OurFlock" class="title_text1">Birds of a feather flock together</div>
