Added new Favicon

--- a/MyFlock 0.62/templates/index.html
+++ b/MyFlock 0.62/templates/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <title>MyFlock</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link rel="icon" href="images/Designer.png" type="image/x-icon">
+  <link rel="icon" href="images/Favicon.png" type="image/x-icon">
  
 </head>
 <body>
   <section class="bar">
     <a href="index.html" class="button2">Home</a>
     <a href="signup.html" class="button2">Signup</a>
-    <a onclick="redirect_about()" class="button2"
+    <a onclick="redirect_about()" class="button2"></a>
     <a href="signin.html" class="button2">Sign in</a>
     <input type="text" id="Search">
   </section>
